--- a/background/background.html
+++ b/background/background.html
@@ -181,6 +181,7 @@
 <script src="scripts/jquery/jquery.js"></script>
 <script src="scripts/bootstrap/bootstrap.js"></script>
 <script src="scripts/tools/validator.js"></script>
+<script type="text/javascript" src="scripts/pwstrength/dist/pwstrength-bootstrap.min.js"></script>
 <script src="scripts/tools/autocomplete.js"></script>
 <script src="scripts/ui/fab.js"></script>
 <script src="app.js"></script>
