--- a/background/background.html
+++ b/background/background.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/mp.css"/>
   <!-- <link rel="stylesheet" href="css/app.css"> -->
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/sidebar.css">
   <link rel="stylesheet" href="css/fab.css">
   <link rel="stylesheet" href="css/animation.css">
 
@@ -26,8 +27,9 @@
      <div class="water-drop"></div>
      <div class="button button-floating"></div>
      <div class="button-floating-shadow"></div>
-     <div class="button button-sub" data-toggle="modal" data-target="#modal-newEntry"><p class="next-to-button">New Entry</p><div class="text-center"><i class="material-icons">bookmark</i></div></div>
-     <div class="button button-sub" data-toggle="modal" data-target="#modalCategory"><p class="next-to-button">New Category</p><div class="text-center"><i class="material-icons">class</i></div></div>
+     <div class="button button-sub" data-toggle="modal" data-target="#modal-newEntry"><p class="next-to-button">Entry</p><div class="text-center"><i class="material-icons">bookmark</i></div></div>
+     <div class="button button-sub" data-toggle="modal" data-target="#modalCategory"><p class="next-to-button">Category</p><div class="text-center"><i class="material-icons">book</i></div></div>
+     <div class="button button-sub" data-toggle="modal" data-target="#modalModification"><p class="next-to-button">Modification</p><div class="text-center"><i class="material-icons">cached</i></div></div>
    </div>
  </div>
 
@@ -43,23 +45,70 @@
   </div>
 </nav>
 
+<aside id='sidebar'>
+  <div class="sidebar-head"></div>
+  <div class="sidebar-row active" id="sidebar-categories">
+  <i class="material-icons">book</i>
+  <p>Categories</p>
+  </div>
+  <div class="sidebar-row" id="sidebar-unique">
+    <i class="material-icons">list</i>
+  <p>Unique Passwords</p>
+  </div>
+  <hr>
+  <div class="sidebar-row" id="sidebar-modifications">
+    <i class="material-icons">cached</i>
+  <p>PW Modifications</p>
+  </div>
+</aside>
 
 
 <div class="container">
-  <div class="row content container" id="content">
-   <div class="page-header">
-     <h1><i class="material-icons"></i>_Password Categories <small> organise your re-used passwords</small></h1>
+  <div class="mp-section" id="section-categories">
+    <div class="row content" id="content">
+     <div class="page-header">
+       <h1><i class="material-icons"></i>Password Categories</h1>
+       <p class="section-hint">Organise your reused passwords - each password category represents a single password. You can assign multiple accounts that (re)use that password to a category. The actual storage of passwords is optional.</p>
+     </div>
+     <div id="categoryContainer"></div>
    </div>
-   <div id="categoryContainer"></div>
+   <div>
+     <div class="card-wrapper">
+     </div>
+     <div id="entryContainer"></div>
+   </div>
  </div>
- <div class="card-wrapper">
-   <div id="entryContainer"></div>
+ <div class="mp-section" id='section-unique'>
+   <div class="content row">
+     <div class="page-header">
+       <h1>Unique Passwords</h1>
+       <p class="section-hint">TODO</p>
+     </div>
+     <div class="card-wrapper">
+       <div id="uniqueEntryContainer"></div>
+     </div>
+   </div>
  </div>
- <div class="page-header">
-   <h1>_Unique Passwords <small></small></h1>
+  <div class="mp-section" id='section-modifications'>
+   <div class="content row">
+     <div class="page-header">
+       <h1>Password Modifications</h1>
+        <p class="section-hint">TODO</p>
+     </div>
+     <div class="card-wrapper">
+       <div id="modificationEntryContainer"></div>
+     </div>
+   </div>
  </div>
- <div class="card-wrapper">
-   <div id="uniqueEntryContainer"></div>
+   <div class="mp-section" id='section-searchresults'>
+   <div class="content row">
+     <div class="page-header">
+       <h1>Results for: <small></small></h1>
+     </div>
+     <div class="card-wrapper">
+       <div id="searchEntryContainer"></div>
+     </div>
+   </div>
  </div>
  <!-- Modal Category -->
  <div class="modal modal-mp fade" id="modalCategory" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -73,8 +122,8 @@
         <div class="form-group has-feedback">
           <label for="category-name">Category Name</label>
           <input type="text" minlength="1" class="form-control" id="modalCategoryName" placeholder="Category Name" required>
-           <span class="glyphicon form-control-feedback" ></span>
-            <div class="help-block with-errors"></div>
+          <span class="glyphicon form-control-feedback" ></span>
+          <div class="help-block with-errors"></div>
         </div>
         <div id="pw-hint">
           <i class="material-icons hastext">lock_open</i><span>No password will be stored for this category and its entries.</span>
@@ -84,8 +133,8 @@
         <div id="enter-category-pwd" class="form-group has-feedback hidden">
           <label for="category-pwd">Enter a Category Password</label>
           <input type="password" minlength="1" class="form-control" id="category-pwd" placeholder="Password" required>
-           <span class="glyphicon form-control-feedback" ></span>
-            <div class="help-block with-errors"></div>
+          <span class="glyphicon form-control-feedback" ></span>
+          <div class="help-block with-errors"></div>
         </div>
       </form>
     </div>
@@ -164,7 +213,7 @@
           <div class="form-group has-feedback radio-option option-pwd hidden" value="option-pwd">
             <label for="enterPWD">Enter a Unique Password</label>
             <input minlength="1" id="enterPWD" class="form-control new-entry pwd" type="password" placeholder="" required/>
-             <span class="glyphicon form-control-feedback" ></span>
+            <span class="glyphicon form-control-feedback" ></span>
             <div class="help-block with-errors"></div>
           </div>
         </form>
