revert changes to work in chrome

--- a/background/background.html
+++ b/background/background.html
@@ -141,7 +141,7 @@
     <div class="modal-footer">
      <div id="modalAction">
       <button type="button" class="btn btn-default btn-mp light" data-dismiss="modal">Close</button>
-      <button id="addCategory" type="button" class="btn btn-primary btn-mp">Save entry</button>
+      <button id="addCategory" type="button" class="btn btn-primary btn-mp">Save</button>
     </div>
     <div id="modalYesNo" class="hidden"><span>Are you sure you want to update this category?</span>
       <button id="modalNo" type="button" class="btn btn-default btn-mp light">Cancel</button>
@@ -221,7 +221,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default btn-mp light" data-dismiss="modal">Close</button>
-        <button id="addEntry" type="submit" class="btn btn-primary btn-mp">Save entry</button>
+        <button id="addEntry" type="submit" class="btn btn-primary btn-mp">Save</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
