--- a/background/background.html
+++ b/background/background.html
@@ -107,12 +107,9 @@
      </div>
      <div class="card-wrapper">
        <div id="searchEntryContainer">
-         <div id="searchResults-category">
-        
-         </div>
-         <div id="searchResults-unique">
-         <
-         </div>
+         <div id="searchResults-category"></div>
+         <hr>
+         <div id="searchResults-unique"></div>
        </div>
      </div>
    </div>
