add empty sections: preferences, about

--- a/background/background.html
+++ b/background/background.html
@@ -52,10 +52,18 @@
     <i class="material-icons">list</i>
     <p>Unique Passwords</p>
   </div>
-  <hr>
   <div class="sidebar-row" id="sidebar-modifications">
     <i class="material-icons">cached</i>
     <p>PW Modifications</p>
+  </div>
+  <hr>
+  <div class="sidebar-row" id="sidebar-preferences">
+    <i class="material-icons">build</i>
+    <p>Preferences</p>
+  </div>
+  <div class="sidebar-row" id="sidebar-about">
+    <i class="material-icons">info</i>
+    <p>About</p>
   </div>
 </aside>
 
@@ -94,6 +102,28 @@
      </div>
      <div class="card-wrapper">
        <div id="modificationEntryContainer"></div>
+     </div>
+   </div>
+ </div>
+  <div class="mp-section" id='section-preferences'>
+   <div class="content row">
+     <div class="page-header">
+       <h1>Preferences</h1>
+       <p class="section-hint">TODO</p>
+     </div>
+     <div class="card-wrapper">
+       <!-- <div id="modificationEntryContainer"></div> -->
+     </div>
+   </div>
+ </div>
+   <div class="mp-section" id='section-about'>
+   <div class="content row">
+     <div class="page-header">
+       <h1>About</h1>
+       <p class="section-hint">TODO</p>
+     </div>
+     <div class="card-wrapper">
+       <!-- <div id="modificationEntryContainer"></div> -->
      </div>
    </div>
  </div>
