--- a/popup/popup.html
+++ b/popup/popup.html
@@ -22,7 +22,7 @@
 				<span id="thisURL"></span>
 			</div>
 			<div id="fab_wrapper">
-				<div id="fab_content">
+			 	<div id="fab_content">
 					<div class="water-drop"></div>
 					<div class="button button-floating"></div>
 					<div class="button-floating-shadow"></div>
@@ -68,7 +68,7 @@
 
 		</div>
 		<div class="footer">
-			<p class="link manager">Open Manager</p>
+			<a class="link manager btn-mp light">Open Manager</a>
 		</div>
 		<script src="../background/scripts/jquery/jquery.js"></script>
 		<script src="../background/scripts/ui/fab.js"></script>
