--- a/background/background.html
+++ b/background/background.html
@@ -4,13 +4,22 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap default -->
   <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/mp.css"/>
+  <!-- Bootstrap Material Design -->
+  <link href="css/material/bootstrap-material-design.css" rel="stylesheet">
+  <link href="css/material/ripples.min.css" rel="stylesheet">
+  <!-- Custom Styles -->
+  <!-- <link rel="stylesheet/less" type="text/css" href="css/mp.less"/> -->
+  <link rel="stylesheet" href="css/mp.css">
   <link rel="stylesheet" href="css/sidebar.css">
   <link rel="stylesheet" href="css/fab.css">
-
+  <link rel="stylesheet" href="css/checkbox.css">
+  <!-- Fonts -->
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <script data-main="app" src="scripts/requirejs/require.js"></script>
   <title>Password Reuse Manager</title>
 
@@ -34,7 +43,7 @@
  <nav class="navbar navbar-default navbar-fixed-top navbar-mp">
   <div class="container">
     <form>
-      <div class="form-group has-feedback has-feedback-left">
+      <div class="form-group search has-feedback has-feedback-left">
         <input id="search" type="text" class="form-control" placeholder="Search" />
         <i id="search-icon" class="form-control-feedback material-icons">search</i>
       </div>
@@ -73,7 +82,7 @@
     <div class="row content" id="content">
      <div class="page-header">
        <h1><i class="material-icons"></i>Password Categories</h1>
-       <p class="section-hint">Organise your reused passwords - each password category represents a single password. You can assign multiple accounts that (re)use that password to a category. The actual storage of passwords is optional.</p>
+       <p class="section-content">Organise your reused passwords - each password category represents a single password. You can assign multiple accounts that (re)use that password to a category. The actual storage of passwords is optional.</p>
      </div>
      <div id="categoryContainer"></div>
    </div>
@@ -87,10 +96,12 @@
    <div class="content row">
      <div class="page-header">
        <h1>Unique Passwords</h1>
-       <p class="section-hint">TODO</p>
+       <p class="section-content">Here you find all entries you explicitly create with a stored password.</p>
      </div>
      <div class="card-wrapper">
-       <div id="uniqueEntryContainer"></div>
+       <div id="uniqueEntryContainer">
+         <h3>No entries yet.</h3>
+       </div>
      </div>
    </div>
  </div>
@@ -98,55 +109,73 @@
    <div class="content row">
      <div class="page-header">
        <h1>Password Modifications</h1>
-       <p class="section-hint">TODO</p>
+       <p class="section-content">TODO</p>
      </div>
      <div class="card-wrapper">
        <div id="modificationEntryContainer"></div>
      </div>
    </div>
  </div>
-  <div class="mp-section" id='section-preferences'>
+ <div class="mp-section" id='section-preferences'>
    <div class="content row">
      <div class="page-header">
        <h1>Preferences</h1>
-       <p class="section-hint">TODO</p>
-     </div>
-     <div class="card-wrapper">
-       <!-- <div id="modificationEntryContainer"></div> -->
+       <div class="section-content">
+
+        <div class="form-group">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"><span class="checkbox-material"></span>  Autofill username
+            </label>
+          </div>
+          <p class="help-block">Enable autofilling login forms on saved accounts.</p>
+        </div>
+        <div class="form-group">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"><span class="checkbox-material"></span>  Autofill password
+            </label>
+          </div>
+          <p class="help-block">Enable autofilling password fields in case of stored password.</p>
+        </div>
+
+      </div>
+    </div>
+
+
+</div>
+</div>
+<div class="mp-section" id='section-about'>
+ <div class="content row">
+   <div class="page-header">
+     <h1>About</h1>
+     <p class="section-content">TODO</p>
+   </div>
+   <div class="card-wrapper">
+     <!-- <div id="modificationEntryContainer"></div> -->
+   </div>
+ </div>
+</div>
+<div class="mp-section" id='section-searchresults'>
+ <div class="content row">
+   <div class="page-header">
+     <h1>Results for: <small></small></h1>
+   </div>
+   <div class="card-wrapper">
+     <div id="searchEntryContainer">
+       <div id="searchResults-category"></div>
+       <hr>
+       <div id="searchResults-unique"></div>
      </div>
    </div>
  </div>
-   <div class="mp-section" id='section-about'>
-   <div class="content row">
-     <div class="page-header">
-       <h1>About</h1>
-       <p class="section-hint">TODO</p>
-     </div>
-     <div class="card-wrapper">
-       <!-- <div id="modificationEntryContainer"></div> -->
-     </div>
-   </div>
- </div>
- <div class="mp-section" id='section-searchresults'>
-   <div class="content row">
-     <div class="page-header">
-       <h1>Results for: <small></small></h1>
-     </div>
-     <div class="card-wrapper">
-       <div id="searchEntryContainer">
-         <div id="searchResults-category"></div>
-         <hr>
-         <div id="searchResults-unique"></div>
-       </div>
-     </div>
-   </div>
- </div>
- <!-- Modal Category -->
- <div class="modal modal-mp fade" id="modalCategory" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+</div>
+<!-- Modal Category -->
+<div class="modal modal-mp fade" id="modalCategory" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-       <h4 class="modal-title" id="myModalLabel">New Category</h4>
+       <h2 class="modal-title" id="myModalLabel">Edit Category</h2>
      </div>
      <div class="modal-body">
        <form role="form" data-toggle="validator">
@@ -205,10 +234,11 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Add new entry</h4>
+        <h2 class="modal-title">Add new entry</h2>
       </div>
       <div class="modal-body">
-        <form role="form" data-toggle="validator">      
+        <form role="form" data-toggle="validator"> 
+
           <div class="form-group has-feedback">
             <label for="enterURL">URL</label>             
             <input id="enterURL" list="historyList" class="form-control new-entry url" minlength="1" type="url" placeholder="Account address" required/>
@@ -223,39 +253,42 @@
           </div>
         </form>
         <form role="form" data-toggle="validator" id="radio-form">
-          <div class="radio">
-            <label class="active">
-              <input type="radio" name="optionsRadios" id="optionsRadios1" value="option-category" checked="true">
-              Assign to a password category
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="optionsRadios" id="optionsRadios2" value="option-pwd">
-              Use a unique password
-            </label>
-          </div>
-        </form>
-        <form role="form" data-toggle="validator">
-          <div class="form-group radio-option option-category" value="option-category">
-            <label for="categoryDropdown">Choose Password Category</label>
-            <select class="form-control" id="categoryDropdown"><!-- fill <options> on init() --></select>
-          </div>
-          <div class="form-group has-feedback radio-option option-pwd hidden" value="option-pwd">
-            <label for="enterPWD">Enter a Unique Password</label>
-            <input minlength="1" id="enterPWD" class="form-control new-entry pwd" type="password" placeholder="" required/>
-            <span class="glyphicon form-control-feedback" ></span>
-            <div class="help-block with-errors"></div>
-          </div>
-        </form>
+          <div class="form-group">
+            <div class="radio">
+              <label>
+                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option-category" checked="true"><span class="circle"></span><span class="check"></span>
+                Assign to a password category
+              </label>
+              <label class="active"></label>
+            </div>
+            <div class="radio">
+             <label>
+               <input type="radio" name="optionsRadios" id="optionsRadios2" value="option-pwd"><span class="circle"></span><span class="check"></span>
+               Use a unique password
+             </label>
+           </div>
+         </div>
+       </form>
+       <form role="form" data-toggle="validator">
+        <div class="form-group radio-option option-category" value="option-category">
+          <label for="categoryDropdown">Choose Password Category</label>
+          <select class="form-control" id="categoryDropdown"><!-- fill <options> on init() --></select>
+        </div>
+        <div class="form-group has-feedback radio-option option-pwd hidden" value="option-pwd">
+          <label for="enterPWD">Enter a Unique Password</label>
+          <input minlength="1" id="enterPWD" class="form-control new-entry pwd" type="password" placeholder="" required/>
+          <span class="glyphicon form-control-feedback" ></span>
+          <div class="help-block with-errors"></div>
+        </div>
+      </form>
 
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default btn-mp light" data-dismiss="modal">Close</button>
-        <button id="addEntry" type="submit" class="btn btn-primary btn-mp">Save</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default btn-mp light" data-dismiss="modal">Close</button>
+      <button id="addEntry" type="submit" class="btn btn-primary btn-mp">Save</button>
+    </div>
+  </div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
 <script src="scripts/jquery/jquery.js"></script>
@@ -263,6 +296,8 @@
 <script src="scripts/tools/validator.js"></script>
 <script type="text/javascript" src="scripts/pwstrength/dist/pwstrength-bootstrap.min.js"></script>
 <script src="scripts/tools/autocomplete.js"></script>
+<script src="scripts/material/material.js"></script>
+<script src="scripts/material/ripples.js"></script>
 <script src="scripts/ui/fab.js"></script>
 <script src="app.js"></script>
 </body>
