implement sidebar toggle
TODO: collapse on breakpoint x

--- a/background/background.html
+++ b/background/background.html
@@ -41,6 +41,7 @@
 
 
  <nav class="navbar navbar-default navbar-fixed-top navbar-mp">
+ <div id="burger"><i class="material-icons">menu</i></div>
   <div class="container">
     <form>
       <div class="form-group search has-feedback has-feedback-left">
