--- a/background/background.html
+++ b/background/background.html
@@ -35,7 +35,7 @@
      <div class="button-floating-shadow"></div>
      <div class="button button-sub" data-toggle="modal" data-target="#modal-newEntry"><p class="next-to-button">Entry</p><div class="text-center"><i class="material-icons">bookmark</i></div></div>
      <div class="button button-sub" data-toggle="modal" data-target="#modalCategory"><p class="next-to-button">Category</p><div class="text-center"><i class="material-icons">book</i></div></div>
-     <div class="button button-sub" data-toggle="modal" data-target="#modalModification"><p class="next-to-button">Modification</p><div class="text-center"><i class="material-icons">cached</i></div></div>
+    <!--  <div class="button button-sub" data-toggle="modal" data-target="#modalModification"><p class="next-to-button">Modification</p><div class="text-center"><i class="material-icons">cached</i></div></div> -->
    </div>
  </div>
 
@@ -62,10 +62,10 @@
     <i class="material-icons">list</i>
     <p>Unique Passwords</p>
   </div>
-  <div class="sidebar-row" id="sidebar-modifications">
+ <!--  <div class="sidebar-row" id="sidebar-modifications">
     <i class="material-icons">cached</i>
     <p>PW Modifications</p>
-  </div>
+  </div> -->
   <hr>
   <div class="sidebar-row" id="sidebar-preferences">
     <i class="material-icons">build</i>
@@ -101,7 +101,6 @@
      </div>
      <div class="card-wrapper">
        <div id="uniqueEntryContainer">
-         <h3>No entries yet.</h3>
        </div>
      </div>
    </div>
@@ -121,12 +120,12 @@
    <div class="content row">
      <div class="page-header">
        <h1>Preferences</h1>
-       <div class="section-content">
+       <div class="section-content" id="preferences">
 
         <div class="form-group">
           <div class="checkbox">
             <label>
-              <input type="checkbox"><span class="checkbox-material"></span>  Autofill username
+              <input type="checkbox" id="pref_autofill_username"><span class="checkbox-material"></span>  Autofill username
             </label>
           </div>
           <p class="help-block">Enable autofilling login forms on saved accounts.</p>
@@ -134,7 +133,7 @@
         <div class="form-group">
           <div class="checkbox">
             <label>
-              <input type="checkbox"><span class="checkbox-material"></span>  Autofill password
+              <input type="checkbox" id="pref_autofill_password"><span class="checkbox-material"></span>  Autofill password
             </label>
           </div>
           <p class="help-block">Enable autofilling password fields in case of stored password.</p>
