fixed problems with category updates (" ", "_")

--- a/background/background.html
+++ b/background/background.html
@@ -131,9 +131,9 @@
           <p class="help-block">Enable autofilling login forms on saved accounts.</p>
         </div>
         <div class="form-group">
-          <div class="checkbox">
+          <div class="checkbox ">
             <label>
-              <input type="checkbox" id="pref_autofill_password"><span class="checkbox-material"></span>  Autofill password
+              <input  type="checkbox" id="pref_autofill_password"><span class="checkbox-material"></span>  Autofill password
             </label>
           </div>
           <p class="help-block">Enable autofilling password fields in case of stored password.</p>
@@ -162,7 +162,7 @@
         <li><a target="_blank" href="  https://github.com/ablanco/jquery.pwstrength.bootstrap">Bootstrap Password Meter</a></li>
          <li><a target="_blank" href="https://github.com/sytelus/CryptoJS">CryptoJS</a></li>
           <li><a target="_blank" href="http://1000hz.github.io/bootstrap-validator/">Validator for Bootstrap</a></li>
-      
+      <li><a target="_blank" href="https://github.com/wrangr/psl">PSL</a></li>
        <li><a target="_blank" href="http://www.louistiti.fr/tutoriel-html5-css3-jquery-bouton-action-goutte-eau-morphing-material-design/34">FAB Button</a></li>
      <li><a target="_blank" href="http://getbootstrap.com">Bootstrap</a></li>
       <li><a target="_blank" href="http://fezvrasta.github.io/bootstrap-material-design">Bootstrap-Material-Design</a></li>
