--- a/login/login.html
+++ b/login/login.html
@@ -100,18 +100,20 @@
         </div>
       </label>
     </div>
-    <div class="radio radio-mp disabled">
+    <div class="radio radio-mp">
       <label>
-        <input type="radio" name="optionsRadios" id="optionsRadios3" value="mode_frequency" disabled>
+        <input type="radio" name="optionsRadios" id="optionsRadios3" value="mode_frequency" >
         <div class="radio-content">
          <div class="name">By Frequency</div>
-         <div class="example">coming soon</div>
+         <span class="label label-default label-mp">Daily</span>
+         <span class="label label-default label-mp">Weekly</span>
+         <span class="label label-default label-mp">Less Frequent</span>
        </div>
      </label>
    </div>
-   <div class="radio radio-mp disabled">
+   <div class="radio radio-mp">
     <label>
-      <input type="radio" name="optionsRadios" id="optionsRadios4" value="mode_hints" disabled>
+      <input type="radio" name="optionsRadios" id="optionsRadios4" value="mode_hints">
       <div class="radio-content">
        <div class="name">Hints help me to organise</div>
        <span class="label label-default label-mp">Dog Password</span>
