--- a/login/login.html
+++ b/login/login.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../background/css/bootstrap.css"/>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Bootstrap Material Design -->
+  <!-- Bootstrap Material Design -->
   <link href="../background/css/material/bootstrap-material-design.css" rel="stylesheet">
   <link href="../background/css/material/ripples.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../background/css/mp.css"/>
@@ -141,6 +141,16 @@
 <script src="../background/scripts/material/ripples.js"></script>
 <script type="text/javascript" src="../background/scripts/pwstrength/dist/pwstrength-bootstrap.min.js"></script>
 <script type="text/javascript" src="../background/scripts/cryptojs/rollups/sha512.js"></script>
+<script type="text/javascript" src="../background/scripts/cryptojs/rollups/pbkdf2.js"></script>
+<script type="text/javascript" src="../background/scripts/cryptojs/rollups/aes.js"></script>
+<script language="JavaScript" type="text/javascript" src="../background/scripts/cryptico/jsbn.js"></script>
+<script language="JavaScript" type="text/javascript" src="../background/scripts/cryptico/random.js"></script>
+<script language="JavaScript" type="text/javascript" src="../background/scripts/cryptico/hash.js"></script>
+<script language="JavaScript" type="text/javascript" src="../background/scripts/cryptico/rsa.js"></script>
+<script language="JavaScript" type="text/javascript" src="../background/scripts/cryptico/aes.js"></script>
+<script language="JavaScript" type="text/javascript" src="../background/scripts/cryptico/api.js"></script>
+<script type="text/javascript" src="../background/scripts/cryptico/cryptico.js"></script>
+
 <script type="text/javascript" src="login.js"></script>
 </body>
 
